# lora-sim

./: README.md  config.py  pyproject.toml  simulator.py  utils.py
scenarios/: duty_cycle_rx2.json  gateway_capacity.json  multi_gateway_ack.json  multi_node_collision.json  simple_link.json
src/lora_sim/: __init__.py  __main__.py
src/lora_sim/app/: cli.py  report.py  runner.py
src/lora_sim/domain/: __init__.py  channel.py  enums.py  metrics.py  node.py  packet.py  radio.py
src/lora_sim/io/: result_writer.py
src/lora_sim/models/: __init__.py  adr.py  corruption.py  interference.py  propagation.py  retry.py
src/lora_sim/simulation/: engine.py  event_queue.py  experiments.py  scenario.py
tests/: test_engine.py  test_experiments.py  test_gateway_and_ack.py  test_mac_and_rx2.py  test_monte_carlo.py  test_radio.py  test_scenario_loader.py
